--- a/Unit_19_Starter_Template/Unit_18_HW_Template/index.html
+++ b/Unit_19_Starter_Template/Unit_18_HW_Template/index.html
@@ -3,8 +3,8 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 17 Solved</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <title>Yesenia Gallegos</title>
+    <link href="css/style.css"  rel="stylesheet">
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
     <section class="heroImg">
       <div class="content">
         <h1>Yesenia Gallegos</h1>
-        <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
+        <p>I am  a Highly creative and motivated. Have a passion for Photography. Skilled in user research and wire framing and have strong creative and analytical skills.</p>
     <style>
         /* Basic button styling */
         .myButton {
